[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Scripts/Tile.gd" type="Script" id=1]
[ext_resource path="res://Assets/Scripts/TileState.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]

[sub_resource type="VisualShaderNodeColorConstant" id=2]

[sub_resource type="VisualShader" id=3]
code = "shader_type spatial;



void vertex() {
// Output:0

}

void fragment() {
// Color:2
	vec3 n_out2p0;
	float n_out2p1;
	n_out2p0 = vec3(1.000000,1.000000,1.000000);
	n_out2p1 = 1.000000;

// Output:0
	ALBEDO = n_out2p0;

}

void light() {
// Output:0

}
"
nodes/fragment/0/position = Vector2( 760, 100 )
nodes/fragment/2/node = SubResource( 2 )
nodes/fragment/2/position = Vector2( 380, 120 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[sub_resource type="QuadMesh" id=5]

[sub_resource type="VisualShaderNodeColorConstant" id=6]
constant = Color( 0, 0, 0, 1 )

[sub_resource type="VisualShader" id=7]
code = "shader_type spatial;



void vertex() {
// Output:0

}

void fragment() {
// Color:2
	vec3 n_out2p0;
	float n_out2p1;
	n_out2p0 = vec3(0.000000,0.000000,0.000000);
	n_out2p1 = 1.000000;

// Output:0
	ALBEDO = n_out2p0;

}

void light() {
// Output:0

}
"
nodes/fragment/0/position = Vector2( 820, 100 )
nodes/fragment/2/node = SubResource( 6 )
nodes/fragment/2/position = Vector2( 240, 140 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )

[sub_resource type="Animation" id=9]
resource_name = "Flip"
length = 0.6
tracks/0/type = "transform"
tracks/0/path = NodePath("Flipper")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray(  )
tracks/1/type = "bezier"
tracks/1/path = NodePath("Flipper:rotation_degrees:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -90, 0, 39.6, 0, -39.6, -180, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Flipper:translation:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.6 )
}

[node name="Tile" type="Spatial"]
script = ExtResource( 1 )

[node name="StaticBody" type="StaticBody" parent="."]
input_capture_on_drag = true

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
shape = SubResource( 1 )

[node name="TileState" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Flipper" type="Spatial" parent="."]

[node name="Unflipped" type="MeshInstance" parent="Flipper"]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 0, 0 )
material_override = SubResource( 4 )
cast_shadow = 0
mesh = SubResource( 5 )
material/0 = null

[node name="Flipped" type="MeshInstance" parent="Flipper"]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, -0.01, 0 )
cast_shadow = 0
mesh = SubResource( 5 )
material/0 = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flip = SubResource( 9 )
[connection signal="mouse_entered" from="StaticBody" to="TileState" method="_on_StaticBody_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody" to="TileState" method="_on_StaticBody_mouse_exited"]
[connection signal="flip" from="TileState" to="." method="_on_TileState_flip"]
[connection signal="zLocation" from="TileState" to="." method="_on_TileState_zLocation" binds= [ 0 ]]
